--- a/hulu-clone/src/Nav.css
+++ b/hulu-clone/src/Nav.css
@@ -5,6 +5,10 @@
   scrollbar-width: none;
   padding: 10px;
   padding-left: 40px;
+  position: sticky;
+  top: 0;
+  z-index: 999;
+  background: linear-gradient(to right, #051421, #042727);
 }
 
 .nav::-webkit-scrollbar {
